--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pricing component</title>
 
   <!-- FONTS  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,50 @@
 <body>
 
   <main class="main-content">
-
+    <div class="container">
+      <div class="pricing-component">
+        <h2 class="pricing-component-heading">
+          Our Pricing
+        </h2>
+        <div class="pricing-toggler-info">
+          <span>Annually</span>
+          <button type="button"></button>
+          <span>Monthly</span>
+        </div>
+        <div class="content-wrapper">
+          <div class="content-box content-box-first">
+            <h4 class="content-name">Basic</h4>
+            <h2 class="content-heading"><span>$</span>19.99</h2>
+            <div class="content-inner">
+              <p class="content-inner-value content-inner-value-storage">500 GB Storage</p>
+              <p class="content-inner-value content-inner-value-usera">2 Users Allowed</p>
+              <p class="content-inner-value content-inner-value-trafic">Send up to 3 GB</p>
+            </div>
+            <a class="content-button" href="#">LEARN MORE</a>
+          </div>
+          <div class="content-box content-box-second">
+            <h4 class="content-name content-inner-second">Professional</h4>
+            <h2 class="content-heading content-inner-second"><span>$</span>24.99</h2>
+            <div class="content-inner content-inner-second">
+              <p class="content-inner-value content-inner-second">1 TB Storage</p>
+              <p class="content-inner-value content-inner-second">5 Users Allowed</p>
+              <p class="content-inner-value content-inner-second">Send up to 10 GB</p>
+            </div>
+            <a class="content-button content-button-second" href="#">LEARN MORE</a>
+          </div>
+          <div class="content-box content-box-third">
+            <h4 class="content-name">Master</h4>
+            <h2 class="content-heading"><span>$</span>39.99</h2>
+            <div class="content-inner">
+              <p class="content-inner-value content-inner-value-storage">2 TB Storage</p>
+              <p class="content-inner-value content-inner-value-usera">10 Users Allowed</p>
+              <p class="content-inner-value content-inner-value-trafic">Send up to 20 GB</p>
+            </div>
+            <a class="content-button" href="#">LEARN MORE</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
 </body>
