fix content box second add border

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <div class="content-box content-box-second">
             <h4 class="content-name content-inner-second">Professional</h4>
             <h2 class="content-heading content-inner-second"><span>$</span>24.99</h2>
-            <div class="content-inner content-inner-second">
+            <div class="content-inner content-inner-second content-inner-second-for-bd-wrapper">
               <p class="content-inner-value content-inner-second">1 TB Storage</p>
-              <p class="content-inner-value content-inner-second">5 Users Allowed</p>
+              <p class="content-inner-value content-inner-second content-inner-second-for-bd-inner">5 Users Allowed</p>
               <p class="content-inner-value content-inner-second">Send up to 10 GB</p>
             </div>
             <a class="content-button content-button-second" href="#">LEARN MORE</a>
